feat(thread): add textarea comment element

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <div class="content">Alert</div>
     </div>
 </div>
-<script type="module" src="/src/main.ts"></script>
+<script async type="module" src="/src/main.ts"></script>
 </body>
 </html>
